[package]
name = "crafter"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]

# random noise
rand = "*"

# perlin noise
perlin2d = "0.2.6"

# openGL bindings
gl = "0.14.0"

# GLFW
glfw = "0.43.0"

# JOML
glam = "0.20.2"

# openAL wrapper
alto = "*"

# Rust stb
image = "0.23.14"

# Creates a texture atlas
texture_packer = "0.23.1"

# lua jit
mlua = { version = "0.7", features = ["luajit", "vendored"] }